--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_fullscreen">Bandwidth Charts</string>
     <string name="lbl_stop">Stop</string>
     <string name="lbl_start">Start</string>
+    <string name="lbl_config">Config</string>
 </resources>
